--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.c# local env files
+.env*.local
+.env
+.env.development
+.env.productionarticles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -26,7 +30,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env.local
 .env
 
 # vercel
