--- a/.github/workflows/main_roledeskfront.yml
+++ b/.github/workflows/main_roledeskfront.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - roleDeskFront
+name: Build and Deploy Next.js to Azure App Service
 
 on:
   push:
@@ -13,59 +10,75 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22.x'
+          node-version: '18.x'
 
-      - name: npm install, build, and test
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Inject environment variables for production
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          echo "NEXT_PUBLIC_SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env.production
+          echo "SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }}" >> .env.production
+          echo "NEXT_PUBLIC_AGORA_APP_ID=${{ secrets.NEXT_PUBLIC_AGORA_APP_ID }}" >> .env.production
+          echo "APP_CERTIFICATE=${{ secrets.APP_CERTIFICATE }}" >> .env.production
+          echo "NEXT_PUBLIC_BACKEND_URL=${{ secrets.NEXT_PUBLIC_BACKEND_URL }}" >> .env.production
+          echo "NEXT_PUBLIC_BASE_URL=${{ secrets.NEXT_PUBLIC_BASE_URL }}" >> .env.production
+          echo "SERVICE_ROLE=${{ secrets.SERVICE_ROLE }}" >> .env.production
+          echo "PORT=80" >> .env.production
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Copy .env.production to .env
+        run: cp .env.production .env
 
-      - name: Upload artifact for deployment job
+      - name: Build app
+        run: npm run build
+
+      - name: Zip app for deployment
+        run: |
+          mkdir deploy
+          cp -r .next public package.json package-lock.json node_modules deploy/
+          cd deploy
+          zip -r ../release.zip .
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
+          name: nextjs-app
           path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: nextjs-app
 
-      - name: Unzip artifact for deployment
+      - name: Unzip artifact
         run: unzip release.zip
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_950D897F90D84F229714267692672357 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_7207642A311C42A2916137AF72CA85D3 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D0880F405D6148948307ABC34DEB6FA4 }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'roleDeskFront'
           slot-name: 'Production'
           package: .
-          
