--- a/.github/workflows/main_roledeskfront.yml
+++ b/.github/workflows/main_roledeskfront.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Next.js to Azure App Service
+name: Build and deploy Node.js app to Azure Web App - roleDeskFront
 
 on:
   push:
@@ -9,76 +9,45 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: '22'
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Inject environment variables for production
-        run: |
-          echo "NEXT_PUBLIC_SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env.production
-          echo "SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }}" >> .env.production
-          echo "NEXT_PUBLIC_AGORA_APP_ID=${{ secrets.NEXT_PUBLIC_AGORA_APP_ID }}" >> .env.production
-          echo "APP_CERTIFICATE=${{ secrets.APP_CERTIFICATE }}" >> .env.production
-          echo "NEXT_PUBLIC_BACKEND_URL=${{ secrets.NEXT_PUBLIC_BACKEND_URL }}" >> .env.production
-          echo "NEXT_PUBLIC_BASE_URL=${{ secrets.NEXT_PUBLIC_BASE_URL }}" >> .env.production
-          echo "SERVICE_ROLE=${{ secrets.SERVICE_ROLE }}" >> .env.production
-          echo "PORT=80" >> .env.production
-
-      - name: Copy .env.production to .env
-        run: cp .env.production .env
+        run: npm install
 
       - name: Build app
         run: npm run build
 
-      - name: Zip app for deployment
-        run: |
-          mkdir deploy
-          cp -r .next public package.json package-lock.json node_modules deploy/
-          cd deploy
-          zip -r ../release.zip .
+      - name: Zip artifact
+        run: zip release.zip ./* -r
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: nextjs-app
+          name: node-app
           path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write
-      contents: read
-
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: nextjs-app
+          name: node-app
 
       - name: Unzip artifact
         run: unzip release.zip
 
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-      - name: Deploy to Azure App Service
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'roleDeskFront'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_ROLEDESKFRONT }}
           package: .
