--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,22 +13,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build
-
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           action: "upload"
-          app_location: "/" 
-          output_location: ".next" 
- 
+          app_location: "/" # o "RoleDesk_F" si tu app está en esa carpeta
+          output_location: "" # déjalo vacío para Next.js, Azure lo detecta
